--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -3,4 +3,9 @@ NAME = phonebook
 all: $(NAME)
 
 $(NAME):
-	c++ -Wall -Wextra -Werror -std=c++98 Contact.cpp main.c -o $(NAME)
+	c++ -Wall -Wextra -Werror -std=c++98 Contact.cpp main.cpp -o $(NAME)
+
+clean:
+	rm -rf $(NAME)
+
+re:	clean $(NAME)
